add integration and unit test folder